# dat

./: .datconfig.example  .gitignore  CHANGELOG.md  CNAME  README.md  __init__.py  dat  install_deps.sh  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: -bug--report-all-errors-like-so--.md
.github/workflows/: ci.yml  sign-and-release.yml
docs/: 404.html  ABOUT.md  CHANGELOG.md  CLI_REFERENCE.md  CONFIG.md  CONFIGURATION.md  FAQ.md  INSTILLATION.md  INSTILLATION.mg  ROADMAP.md  TROUBLESHOOTING.md  USAGE.md  VERSION_HISTORY.md  _config.yml  changelog.md  ci.md  gpg-signing.md  index.md  install.md  integration-lrc.md  output-formats.md  usage.md
docs/_includes/: footer.html  head.html  header.html
docs/_layouts/: default.html  page.html
docs/assets/css/: space-age.css
examples/: sample_output.txt
scripts/: bootstrap.sh
src/dat/: __init__.py  cli.py  integration.py  pdf.py  report.py  rules.py  scanner.py  utils.py
src/dat/integration/: lrc.py  signing.py
src/dat/logging/: audit.py
src/dat/pdf/: report.py
src/dat/rules/: engine.py
src/dat/scanner/: core.py
tests/: __init__.py  test_cli.py  test_core.py  test_integration_lrc.py  test_pdf.py  test_report.py  test_scanner.py
tools/: dat2lrc.py
