[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dat"
version = "3.0.0a1"
description = "Dev Audit Tool"
authors = [{name = "~JADIS"}]
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "python-magic>=0.4.27,<1.0",
  "reportlab>=4.0.8,<5.0",
  "Pillow>=11.3.0,<12.0",
  "rich>=13.7.0,<14.0",
  "cryptography>=42.0.0,<43.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0,<9.0.0",
  "tox>=4.14.0,<5.0",
]

[project.scripts]
dat = "dat.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-ra"
filterwarnings = ["ignore::UserWarning"]

[tool.tox]
legacy_tox_ini = "tox.ini"
